<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Triqui</string>
    <color name="white">#ffffff</color>
    <string name="action_new_game">Nuevo Juego</string>
    <string name="ai_difficulty">Dificultad</string>
    <string name="preferences">Preferencias</string>
    <string name="sound">Sonido</string>
    <string name="sound_setting">apagar o encender sonido</string>
    <string name="victory_msg">Victoria</string>
    <string name="reset_score">Reiniciar puntaje</string>
    <string name="exit">Salir</string>
    <string name="first_human">Juegas de primero.</string>
    <string name="turn_human">Es tu turno.</string>
    <string name="turn_computer">Turno de tu oponente.</string>
    <string name="score_label_human">Tú:</string>
    <string name="score_label_computer">Oponente:</string>
    <string name="score_label_tie">Empates:</string>
    <string name="result_tie">Empate.</string>
    <string name="result_human_wins">Crack!</string>
    <string name="result_computer_wins">F!</string>
    <string name="difficulty_choose">Nivel:</string>
    <string name="difficulty_easy">Fácil</string>
    <string name="difficulty_harder">Medio</string>
    <string name="difficulty_expert">Dificil</string>
    <string name="quit_question">Desea Salir?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="description">Universidad Nacional de Colombia - Sede Bogota - Facultad de Ingenieria\nDesarrollo de Aplicaciones Moviles.\n Mateo Fonseca</string>
    <string name="about">Creditos de TicTacToe.</string>
</resources>